--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="description" content="Official website of IEEE Students Branch, Carmel College of Engineering and Technology, Alappuzha , punnapra">
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Raleway:wght@100;200;300;400;600;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700&display=swap"
     rel="stylesheet">
